--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.5.1",
     "express": "~4.16.1",
+    "express-validator": "^6.11.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "joi": "^17.4.0",
