--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.5.1",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.1",
     "express-validator": "^6.11.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
@@ -22,5 +23,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "concurrently": "^6.1.0",
+    "nodemon": "^2.0.7"
   }
 }
